# swift-docker

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  Dockerfile  Dockerfile.template  LICENSE.md  PROJECT.md  README.md  Readme.md  ci_test.py  shippable.yml
.github/: CODEOWNERS
.github/workflows/: android_sdk.yml  pull_request.yml
3.1/: Dockerfile
4.0/: Dockerfile
4.1/: Dockerfile
4.2/: Dockerfile
4.2/ubuntu/16.04/: Dockerfile
4.2/ubuntu/18.04/: Dockerfile  preseed.txt
5.0/ubuntu/16.04/: Dockerfile  Dockerfile-slim
5.0/ubuntu/18.04/: Dockerfile  Dockerfile-slim
5.1/ubuntu/16.04/: Dockerfile
5.1/ubuntu/18.04/: Dockerfile
5.10/amazonlinux/2/: Dockerfile
5.10/centos/7/: Dockerfile
5.10/debian/12/: Dockerfile
5.10/fedora/39/: Dockerfile
5.10/rhel-ubi/9/: Dockerfile
5.10/ubuntu/18.04/: Dockerfile
5.10/ubuntu/20.04/: Dockerfile
5.10/ubuntu/22.04/: Dockerfile
5.10/ubuntu/23.10/: Dockerfile
5.10/ubuntu/24.04/: Dockerfile
5.10/windows/1809/: Dockerfile
5.10/windows/LTSC2022/: Dockerfile
5.2/amazonlinux/2/: Dockerfile
5.2/centos/7/: Dockerfile
5.2/centos/8/: Dockerfile
5.2/ubuntu/16.04/: Dockerfile
5.2/ubuntu/18.04/: Dockerfile
5.2/ubuntu/20.04/: Dockerfile
5.3/amazonlinux/2/: Dockerfile
5.3/centos/7/: Dockerfile
devContainer/: Dockerfile
docs/: README.md  Windows.md
swift-ci/: README.md  install_node.sh
swift-ci/dependencies/: requirements.txt
swift-ci/sdks/static-linux/resources/fts/: CMakeLists.txt  README.md  config.h  fts.h
swift-ci/swift-docc-render/: Dockerfile  build-swift-docc-render.sh
(+585 files in other folders)
